--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to E.K.Rajagopalan's Resume</title>
-    <link rel="stylesheet" href="C:\Users\E K Rajagopalan\OneDrive\Desktop\assignment 1\styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
